--- a/composer.json
+++ b/composer.json
@@ -12,6 +12,7 @@
     "require": {
         "fed/ewma-module-installer-plugin": "~0.0.1",
         "fed/dialogs": "^0.0",
-        "fed/ui": "^0.0"
+        "fed/ui": "^0.0",
+        "fed/ace": "^0.0"
     }
 }
