"fed/perfect-scrollbar": "^0.0"

--- a/composer.json
+++ b/composer.json
@@ -13,6 +13,7 @@
         "fed/ewma-module-installer-plugin": "~0.0.1",
         "fed/dialogs": "^0.0",
         "fed/ui": "^0.0",
-        "fed/ace": "^0.0"
+        "fed/ace": "^0.0",
+        "fed/perfect-scrollbar": "^0.0"
     }
 }
