fix package name

--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "fed/dev",
+    "name": "fed/ewma-dev",
     "type": "ewma-module",
     "description": "ewma dev",
     "authors": [
